k8s/manifests/backend-deployment.yaml
# This manifest is reponsible for deploying our backend.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mull-backend
  namespace: mull
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mull-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mull-backend
    spec:
      containers:
        - name: mull-backend
          image: 'ritchellegmp/mull-backend:latest'
          imagePullPolicy: Always
          ports:
            - name: backend
              containerPort: 3333
              protocol: TCP
