k8s/manifests/backend-service.yaml
# This manifest is responsible for exposing the backend's 3333 port to the rest of the cluster.
apiVersion: v1
kind: Service
metadata:
  name: mull-backend-service
  namespace: mull
spec:
  type: ClusterIP
  ports:
    - port: 3333
      targetPort: 3333
      protocol: TCP
      name: backend
  selector:
    app.kubernetes.io/name: mull-backend
